@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pclean-9999 (07 Sep 2011)
+
+  07 Sep 2011; <alunduil@gentoo.org> +pclean-9999.ebuild:
+  Adding a git live build for pclean.
+
   21 Mar 2011; <alunduil@gentoo.org> -pclean-0.12.ebuild:
   Removing older pclean build.
 
